--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p,a,input,button,h1,h2,h3,h4,h5,h6 {
+  font-family: 'Libre Franklin', sans-serif;
+}
+
+.App {
+  display: block;
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 100%;
+}
+.Navbar{
+  width: 100%;
+  padding: 30px 0;
+}
+.Navbar > img {
+  display: block;
+  margin: auto;
+}
+.center{
+  text-align: center;
+}
+.text{
+  width: 100%;
+}
+.first{
+  font-weight: 300;
+  font-size: 40px;
+  color: hsl(0, 0%, 59%);
+}
+.first > b {
+  color: hsl(209, 33%, 12%);
+}
+.second{
+  font-size: 20px;
+  font-weight: 600;
+  color: hsl(209, 33%, 12%);
+  margin-top: -22px;
+}
+.form{
+  margin: auto;
+  text-align: center;
+  max-width: 550px;
+  margin-top: 50px;
+}
+form{
+  display: flex;
+  margin: 0 -10px;
+}
+.input{
+  padding: 20px 30px;
+  width: 100%;
+  margin: 0 10px;
+  border-radius: 9999px;
+  border: 1px solid hsl(223, 100%, 88%);
+  outline: none;
+}
+.nm-button{
+  margin: 0 10px;
+  width: 250px;
+  padding: 20px 50px;
+  height: 100%;
+  border-radius: 9999px;
+  outline: none;
+  border: none;
+  background: hsl(223, 87%, 63%);
+  font-weight: 600;
+  color: #fff;
+}
+.nm-button:hover{
+  cursor: pointer;
+}
+::placeholder{
+  font-family: 'Libre Franklin', sans-serif;
+  color: hsl(223, 100%, 88%);
+}
+.mockup{
+  margin: 50px 0;
+}
+.mockup > img {
+  display: block;
+  max-width: 500px;
+  margin: auto;
 }
