--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ form{
   width: 100%;
   margin: 0 10px;
   border-radius: 9999px;
+  background: #fff;
   border: 1px solid hsl(223, 100%, 88%);
   outline: none;
 }
